# SP-YTCS

./: README.md
YT/: comments.json  pyproject.toml  scrape_youtube_comments.py
YT/src/yt_comment_scraper/: __init__.py  cli.py  scraper.py
